--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -317,11 +317,12 @@
 --------------------                    --------------------
         </pre></pre>
         <pre *ngSwitchCase="'education'">weibanghuang@computer % open ~/Education <br>...<br>Stony Brook University <br>B.S. in Applied Math and Information Systems.</pre>
-        <pre *ngSwitchCase="'experience'">weibanghuang@computer % open ~/Experiences <br>...<br>Capgemini <br>Jul.2021-Present <br>Data Engineer <br><br>Stony Brook University <br>Aug.2018-Dec.2018<br>Differential Equation Calculus TA
+        <pre *ngSwitchCase="'experience'">weibanghuang@computer % open ~/Experiences <br>...<br>Capgemini <br>Jul.2021-Present <br>Software Engineer <br><br>Stony Brook University <br>Aug.2018-Dec.2018<br>Differential Equation Calculus TA
         <br>Tim Ho Wan <br>May.2017-Aug.2017 <br>Prep Cook</pre>
         <pre *ngSwitchCase="'language'">weibanghuang@computer % open ~/Languages <br>...<br>Java <br>Python <br>SQL <br>HTML/CSS <br>Javascript <br>Typescript<br>Swift</pre>
         <pre *ngSwitchCase="'project'">weibanghuang@computer % open ~/Projects <br>...<br>Projects in github.com/weibanghuang
-        <br>9 by 9 Tic Tac Toe Android Game (Java)
+        <br>Online Multiplayer Tic Tac Toe Android Game (Java)
+        <br>Online Multiplayer Pokemon Android Game (Java)
         <br>Data Mining, Web Scraping, and Visualization (Python)
         <br>iPhone Machine Learning Computer Vision (Swift)
         <br>Meal Kit Delivery Database (SQL)</pre>
